--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,15 @@
 /public/storage
 /storage/*.key
 /vendor
+/public/mix-manifest.json
+/resources/assets/app/js/config/config.js
+/public/css/
+/public/fonts/
+/public/images/
+/public/js/
 .env
 .env.backup
+.env.testing
 .phpunit.result.cache
 docker-compose.override.yml
 Homestead.json
